--- a/Css/stylesheet.css
+++ b/Css/stylesheet.css
@@ -17,3 +17,37 @@
     
 
 }
+
+
+.aboutUs{
+padding:0px 0px 40px 0px;
+
+}
+
+.jumbotron{
+    padding:70px 30px 70px 30px;
+    margin:0px auto;
+    background:#9575CD;
+    color:floralwhite;
+}
+
+
+.address{
+    font-size:80%;
+    margin:0px;
+    color:#0f0f0f;
+
+}
+
+.CLeadership{
+    padding:40px 0px 0px 0px;
+}
+
+body{
+    padding:50px 0px 0px 0px;
+    z-index:0;
+}
+
+.navbar-dark {
+     background-color: #512DA8;
+}
