--- a/Css/styles.css
+++ b/Css/styles.css
@@ -52,3 +52,8 @@ body {
   position: absolute;
   bottom: 0px;
   z-index: 1; }
+
+#loginModal  #clr {
+    color:floralwhite;
+    background-color:  #512DA8;
+}
