--- a/Css/styles.css
+++ b/Css/styles.css
@@ -53,7 +53,9 @@ body {
   bottom: 0px;
   z-index: 1; }
 
-#loginModal  #clr {
-    color:floralwhite;
-    background-color:  #512DA8;
-}
+.modal-header {
+  background: #512DA8;
+  color: floralwhite; }
+
+.modal-body {
+  background: #D1C4E9; }
